Trying to repair it

--- a/html/index.html
+++ b/html/index.html
@@ -8,13 +8,10 @@
     <title>Citybikes</title>
   </head>
   <body>
-<<<<<<< HEAD
+    <p>Pipapo</p>
     <p>TestTestLucas</p>
     <h1>sda</h1>
-=======
-  <p>TestTestLucas</p>
-  <p>Test test Julio</p>
->>>>>>> 30e0a80f499c943969bb8914ec71222d8c89662c
+    <p>Julio</p>
     <div>Hello ProjerVer</div>
     
   </body>
