--- a/html/index.html
+++ b/html/index.html
@@ -16,6 +16,7 @@
     <p>This is just a test</p>
     <p>this should only be in alex</p>
     <p>try out</p>
+    <p>try out2</p>
   </body>
 </html>
  
